chore: ignore android & ios dirs

--- a/apps/expo/.gitignore
+++ b/apps/expo/.gitignore
@@ -91,6 +91,7 @@ DerivedData
 *.ipa
 *.xcuserstate
 project.xcworkspace
+ios/
 
 # Android/IntelliJ
 #
@@ -100,6 +101,7 @@ build/
 local.properties
 *.iml
 *.hprof
+android/
 
 # node.js
 #
